# CS236

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonAutomaton.h  ColonDashAutomaton.h  CommaAutomaton.h  Database.h  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.h  Header.h  IDAutomaton.cpp  IDAutomaton.h  Left_ParenAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  MultilinesCommentAutomaton.cpp  MultilinesCommentAutomaton.h  MultiplyAutomaton.h  Parameter.h  Parser.h  PeriodAutomaton.h  Predicate.h  Q_MarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  Relation.h  Right_ParenAutomaton.h  Rule.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  (+4 more)
Lab2PassOffCases/: in28.txt  in61.txt
Lab4PassOffCases/4-80/: input0.txt
